# MoebiusCode

./: .gitignore  .gitmodules  CMakeLists.txt  Deform2D.cpp  Deform2D.h  Deform3D.cpp  Deform3D.h  DeformTraits.h  ExtraFunctions.cpp  ExtraFunctions.h  Filedialog.h  InterpolateTraits.h  PrescribeEdgeJumps.h  QuadConstSolver.h  QuadConstSolverPardiso.h  QuaternionOps.cpp  QuaternionOps.h  README.md  UnitSphereMoebiusTraits.h  main.cpp
cmake/: FindLIBHEDRA.cmake  FindLIBIGL.cmake  libhedra.cmake
